--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./Menu/Menu.js" async></script>
     <script src="./Article/Article.js" async></script>
     <script src="./Post/Post.js" async></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>-->
 
   </head>
   <body>
