Replaced expand button text with a down arrow svg

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         adipiscing elit. Nidorina Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidoqueen Lorem ipsum dolor sit amet,
         consectetur adipiscing elit. Nidoran Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidorino Lorem ipsum dolor
         sit amet, consectetur adipiscing elit. Nidoking Lorem ipsum</p>
-        <span class='expandButton'></span>
+        <span class='expandButton'><img class="down-arrow" src="./assets/down-arrow.svg"/></span>
       </div>
       <div class="article">
         <h2>Javascript Components II</h2>
@@ -84,7 +84,7 @@
         adipiscing elit. Nidorina Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidoqueen Lorem ipsum dolor sit amet,
         consectetur adipiscing elit. Nidoran Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidorino Lorem ipsum dolor
         sit amet, consectetur adipiscing elit. Nidoking Lorem ipsum</p>
-        <span class='expandButton'></span>
+         <span class='expandButton'><img class="down-arrow" src="./assets/down-arrow.svg"/></span>
       </div>
       <div class="article">
         <h2>Javascript Components I</h2>
@@ -110,7 +110,7 @@
         adipiscing elit. Nidorina Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidoqueen Lorem ipsum dolor sit amet,
         consectetur adipiscing elit. Nidoran Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidorino Lorem ipsum dolor
         sit amet, consectetur adipiscing elit. Nidoking Lorem ipsum</p>
-        <span class='expandButton'></span>
+        < <span class='expandButton'><img class="down-arrow" src="./assets/down-arrow.svg"/></span>
       </div>
       <div class="article">
         <h2>Lambda School Students: "We're the best!"</h2>
@@ -133,7 +133,7 @@
         naboo ackbar tatooine. Hutt lars padmé darth. Maul solo darth darth jabba qui-gon chewbacca darth maul. Moff baba wicket
         han. C-3po antilles moff qui-gon ahsoka aayla dooku amidala. Palpatine droid amidala droid k-3po twi'lek padmé wookiee. Leia
         moff calamari mon obi-wan. Solo grievous lando coruscant. Jinn darth palpatine obi-wan mon.</p>
-        <span class='expandButton'></span>
+         <span class='expandButton'><img class="down-arrow" src="./assets/down-arrow.svg"/></span>
       </div>
       <div class="article">
         <h2>Javascript and You, ES6</h2>
@@ -149,7 +149,7 @@
         wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir
         mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma
         and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
-        <span class='expandButton'></span>
+         <span class='expandButton'><img class="down-arrow" src="./assets/down-arrow.svg"/></span>
       </div>
       <div class="article">
         <h2>React vs Angular vs Vue</h2>
@@ -175,7 +175,7 @@
         adipiscing elit. Nidorina Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidoqueen Lorem ipsum dolor sit amet,
         consectetur adipiscing elit. Nidoran Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidorino Lorem ipsum dolor
         sit amet, consectetur adipiscing elit. Nidoking Lorem ipsum</p>
-        <span class='expandButton'></span>
+         <span class='expandButton'><img class="down-arrow" src="./assets/down-arrow.svg"/></span>
       </div>
       <div class="article">
         <h2>Professional Software Development in 2018</h2>
@@ -198,13 +198,8 @@
           hodor hodor hodor? Hodor, hodor. Hodor. Hodor, hodor - HODOR hodor, hodor hodor hodor! Hodor, hodor. Hodor. Hodor, HODOR
           hodor, hodor hodor, hodor, hodor hodor. Hodor hodor - hodor - hodor... Hodor hodor hodor hodor hodor hodor hodor?! Hodor
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
-        <span class='expandButton'></span>
+         <span class='expandButton'><img class="down-arrow" src="./assets/down-arrow.svg"/></span>
       </div>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous">
-    </script>
   </body>
 </html>
